# topo-imagery

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODING.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pylintrc  pyproject.toml  shell.nix  version.bump.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  init.sh  post_create.sh  post_start.sh
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: publish_container.sh  publish_containers.sh
.github/workflows/: build.yml  ci.yml  containers.yml  format-tests.yml  format.yml  pull-request-container.yml  push.yml  python.yml  release-please.yml  test.yml
common/: pyproject.toml
common/common/aws/: aws_credential_source.py  aws_helper.py
common/common/aws/tests/: aws_helper_test.py
common/common/cli/: cli_helper.py
common/common/files/: file_tiff.py  files_helper.py  fs.py  fs_s3.py  geotiff.py
common/common/files/tests/: file_helper_test.py  file_tiff_test.py  fs_local_test.py  fs_s3_test.py
common/common/stac/imagery/: collection.py  item.py
common/common/stac/tests/: collection_test.py  item_test.py
common/common/stac/util/: checksum.py  stac_extensions.py
common/common/tests/: cli_helper_test.py
containers/gdal/: Dockerfile  README.md  create_polygons.py  pyproject.toml
data/: rgb-file-list-chatham-islands.json  rgb-file-list-hawkes-bay.json  rgb-file-list-manawatu-whanganui.json  rgb-file-list-nelson.json  rgb-file-list-new-zealand.json  rgb-file-list-northland.json  rgb-file-list-otago.json  rgb-file-list-southland.json  rgb-file-list-taranaki.json  rgb-file-list-tasman.json  rgb-file-list-waikato.json  rgb-file-list-wellington.json  rgb-file-list-west-coast.json
imagery/: Dockerfile  pyproject.toml
imagery/imagery/: collection_from_items.py  create_polygons.py  create_stac.py  standardise_validate.py  standardising.py
imagery/imagery/gdal/: gdal_bands.py  gdal_helper.py  gdalinfo.py
scripts/: aws_helper.py  check_tile_alignment.py  cog_compression.py  collection_from_items.py  conftest.py  create_capture_area.py  create_dissolved_polygons.py  create_extents.py  create_polygons.py  create_stac.py  create_stac_item.py  create_stac_items.py  create_vrt.py  datetimes.py  dict_to_json_bytes.py  docker-entrypoint.sh  env.py  example_input.json  file.py  file_helper.py  file_s3.py  fix_laz_header.py  flatten_collections.py  force_dates.py  format_source.py  fs.py  fs_local.py  fs_s3.py  gdal_custom.py  gdal_helper.py  gdal_info.py  generate_hillshade.py  get_collection_properties.py  get_resolution.py  handle_resupply.py  initialise_stac_collection.py  items_from_tiffs.py  json_codec.py  logger.py  merge_collections.py  (+14 more)
scripts/aws/: aws_credential_source.py  aws_helper.py
scripts/aws/tests/: aws_helper_test.py
scripts/cli/: cli_helper.py  common_args.py
scripts/cli/tests/: cli_helper_test.py
scripts/converters/: format_source.py
scripts/converters/tests/: format_source_test.py
scripts/data/: rgb-file-list-chatham-islands.json  rgb-file-list-hawkes-bay.json  rgb-file-list-manawatu-whanganui.json  rgb-file-list-nelson.json  rgb-file-list-new-zealand.json  rgb-file-list-southland.json  rgb-file-list-taranaki.json  rgb-file-list-wellington.json  rgb-file-list-west-coast.json
scripts/files/: file_check.py  file_tiff.py  files_helper.py  fs.py  fs_local.py  fs_s3.py  geotiff.py
scripts/files/tests/: conftest.py  file_check_test.py  file_helper_test.py  file_tiff_test.py  fs_local_test.py  fs_s3_test.py  fs_test.py
scripts/gdal/: gdal_bands.py  gdal_commands.py  gdal_cutline.py  gdal_footprint.py  gdal_helper.py  gdal_preset.py  gdal_presets.py  gdalinfo.py
scripts/gdal/tests/: gdal_bands_test.py  gdal_commands_test.py  gdal_helper_test.py  gdal_preset_test.py  gdalinfo.py  gdalinfo_test.py
scripts/logging/: logging_keys.py  time_helper.py
scripts/pdal/: pdal_commands.py
scripts/pdal/tests/: pdal_commands_test.py
scripts/stac/: collection.py  imagery_stac.py  item.py  link.py
scripts/stac/imagery/: asset.py  capture_aera.py  capture_area.py  collection.py  collection_context.py  constants.py  create_stac.py  generate_metadata.py  import_metadata.py  (+4 more)
scripts/tests/: aws_helper_test.py  cli_helper_test.py  collection_from_items_test.py  conftest.py  datetimes_test.py  file_helper_test.py  format_source_test.py  fs_local_test.py  logger_test.py  merge_collections_test.py  non_visual_qa_test.py  pdal_translate_test.py  run_docker_tests.py  source_list_conversion_test.py  tags_test.py
scripts/tiff/: geotiff.py
scripts/tile/: tile_index.py  util.py
tests/: run.sh  run_docker_tests.py  standardise.sh
topo-imagery/: collection_from_items.py  standardise_validate.py  standardising.py
topo-imagery/aws/: aws_helper.py
topo-imagery/files/: file_tiff.py  fs.py  fs_s3.py  geotiff.py
topo-imagery/gdal/: gdal_bands.py  gdal_helper.py  gdalinfo.py
topo-imagery/logging/: time_helper.py
topo-imagery/tests/: run_docker_tests.py
topo-imagery/tile/: tile_index.py
(+106 files in other folders)
