[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
case_sensitive = true
profile = "black"

[tool.mypy]
show_error_codes = true
strict = true
disable_error_code = [
    "import",
]

[[tool.mypy.overrides]]
module = [
    "linz_logger",
]
ignore_missing_imports = true

[tool.poetry]
name = "topo-imagery"
version = "7.13.1"
description = "A collection of scripts for processing imagery"
authors = [
    "Blayne Chard <bchard@linz.govt.nz>",
    "Daniel Silk <dsilk@linz.govt.nz>",
    "Paul Fouquet <pfouquet@linz.govt.nz>",
    "Alice Fage <afage@linz.govt.nz>",
    "Megan Davidson <mdavidson@linz.govt.nz>",
    "Tobias Schmidt <tschmidt@linz.govt.nz>",
]

[tool.poetry.dependencies]
python = "~3.12.3"
boto3 = "*"
linz-logger = "*"
py-multihash = "*"
shapely = "*"
tifffile = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
gitlint = "*"
isort = "*"
moto = "*"
mypy = "*"
mypy-boto3-s3 = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-dependency = "*"
pytest-mock = "*"
pytest-subtests = "*"
shellcheck-py = "*"
