[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[project]
name = "topo-imagery"
version = "7.21.1"
description = "A collection of scripts for processing imagery"
authors = [
    { name = "Blayne Chard", email = "bchard@linz.govt.nz" },
    { name = "Daniel Silk", email = "dsilk@linz.govt.nz" },
    { name = "Alice Fage", email = "afage@linz.govt.nz" },
    { name = "Sheetal Poudel", email = "spoudel@linz.govt.nz" },
    { name = "Tobias Schmidt", email = "tschmidt@linz.govt.nz" },
]
requires-python = "~=3.12.3"
dependencies = [
    "boto3",
    "linz-logger",
    "py-multihash",
    "shapely",
    "tifffile",
    "common",
]

[dependency-groups]
dev = [
    "black",
    "gitlint",
    "isort",
    "moto",
    "mypy",
    "mypy-boto3-s3",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-dependency",
    "pytest-mock",
    "pytest-subtests",
    "shellcheck-py",
]

[tool.black]
line-length = 127

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
common = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.isort]
line_length = 127
case_sensitive = true
profile = "black"

[tool.mypy]
show_error_codes = true
strict = true
disable_error_code = ["import"]

[[tool.mypy.overrides]]
module = ["linz_logger"]
ignore_missing_imports = true
