[tool.poetry]
name = "gdal"
version = "0.1.0"
description = ""
authors = [
    "Blayne Chard <bchard@linz.govt.nz>",
    "Daniel Silk <dsilk@linz.govt.nz>",
    "Paul Fouquet <pfouquet@linz.govt.nz>",
    "Alice Fage <afage@linz.govt.nz>",
    "Megan Davidson <mdavidson@linz.govt.nz>"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
